# mseb

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml  results.yml
mseb/: __init__.py  conftest.py  dataset.py  dataset_test.py  decoder.py  encoder.py  encoder_test.py  evaluator.py  evaluator_test.py  leaderboard.py  leaderboard_test.py  metrics.py  metrics_test.py  runner.py  runner_test.py  simple_qa.py  svq.py  svq_data.py  svq_data_test.py  task.py  task_test.py  types.py  types_test.py  utils.py  utils_test.py
mseb/abstasks/: meta_data.py  meta_data_test.py
mseb/colab/: MSEB_ASRU_Tutorial.ipynb  README.md  benchmark.ipynb  encoder.ipynb  svq.ipynb
mseb/datasets/: audio_image_base.py  audio_image_base_test.py  base.py  birdset.py  birdset_test.py  flickr8k.py  flickr8k_test.py  fsd50k.py  fsd50k_test.py  parquet.py  parquet_test.py  simple_voice_questions.py  simple_voice_questions_test.py  speech_massive.py  speech_massive_test.py  spoken_coco.py  spoken_coco_test.py  svq.py  svq_test.py  verify_hf_datasets.py
mseb/encoders/: cascade_encoder.py  cascade_encoder_test.py  clap_encoder.py  clap_encoder_test.py  converter.py  converter_test.py  embed_whisper_encoder.py  embed_whisper_encoder_test.py  encodec_encoder.py  encodec_encoder_test.py  encoder_registry.py  encoder_registry_test.py  gecko_encoder.py  gecko_transcript_truth_encoder.py  gecko_transcript_truth_encoder_test.py  gemini_embedding_encoder.py  gemini_embedding_encoder_test.py  gemma3n_encoder.py  gemma_encoder.py  gemma_encoder_test.py  gemma_jax_encoder.py  gemma_jax_encoder_test.py  genai_embedding_encoder.py  genai_embedding_encoder_test.py  genai_llm_encoder.py  genai_llm_encoder_test.py  hf_llm_encoder.py  hf_sound_encoder.py  litellm_embedding_encoder.py  litellm_embedding_encoder_test.py  litellm_encoder.py  litellm_encoder_test.py  litellm_s2t_encoder.py  litellm_s2t_encoder_test.py  litellm_whisper_encoder.py  mapper_reducer.py  mapper_reducer_test.py  normalized_text_encoder_with_prompt.py  normalized_text_encoder_with_prompt_test.py  openai_llm_encoder.py  (+27 more)
mseb/evaluators/: classification_evaluator.py  classification_evaluator_test.py  clustering_evaluator.py  reasoning_evaluator.py  reasoning_evaluator_test.py  reconstruction_evaluator.py  reconstruction_evaluator_test.py  reranking_evaluator.py  reranking_evaluator_test.py  retrieval_evaluator.py  retrieval_evaluator_test.py  retriever.py  retriever_test.py  segmentation_evaluator.py  segmentation_evaluator_test.py  transcription_evaluator.py  transcription_evaluator_test.py
mseb/results/: README.md  leaderboard.css  leaderboard.html  (+1 more)
(+2273 files in other folders)
