[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "mseb"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "mseb authors", email="mseb@google.com"}]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
# Installed locally with `pip install -e .`
dependencies = [
    "array-record",
    "absl-py",
    "apache-beam",
    "datasets==4.0.0",
    "editdistance",
    "etils",
    "fvcore",
    "google-genai",
    "huggingface_hub",
    "jax",
    "jaxtyping",
    "jiwer>=2.0,<3.0",
    "librosa",
    "numpy",
    "pandas",
    "protobuf",
    "pyarrow",
    "pygtrie",
    "scikit-learn",
    "soundfile",
    "tqdm",
    "transformers",
    "tensorflow",
    "tensorflow-datasets==4.9.9",
    "torch",
]

# `version` is automatically set by flit to use `mseb.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-research/mseb"
repository = "https://github.com/google-research/mseb"
changelog = "https://github.com/google-research/mseb/blob/main/CHANGELOG.md"
# documentation = ""

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install -e .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]
whisper = [
    "openai-whisper",
]
scann = [
    "scann==1.3.5",
]
spacy = [
    "spacy",
]
tf_hub = [
    "tensorflow-hub",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
# Flit specific options (files to exclude from the PyPI package).
# If using another build backend (setuptools, poetry), you can remove this
# section.
exclude = [
  # Do not release tests files on PyPI
  "**/*_test.py",
]

[tool.pytest.ini_options]
markers = [
    "optional: marks tests that require optional dependencies",
    "whisper: marks tests for the whisper optional dependency",
    "scann: marks tests for the scann optional dependency"
]
